--- a/Remage/Storyboards/NewReminder.storyboard
+++ b/Remage/Storyboards/NewReminder.storyboard
@@ -237,10 +237,10 @@
                                                 </constraints>
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7pM-Yd-zE8">
-                                                <rect key="frame" x="15" y="345" width="384" height="341"/>
+                                                <rect key="frame" x="15" y="345" width="384" height="427"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="2zD-GN-TH9">
-                                                        <rect key="frame" x="20" y="20" width="344" height="301"/>
+                                                        <rect key="frame" x="20" y="20" width="344" height="247"/>
                                                         <subviews>
                                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vHe-Z8-EPF">
                                                                 <rect key="frame" x="0.0" y="0.0" width="344" height="34"/>
@@ -261,7 +261,8 @@
                                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                         <textInputTraits key="textInputTraits"/>
                                                                         <connections>
-                                                                            <segue destination="ozr-GA-mdF" kind="show" id="xjn-P4-ErC"/>
+                                                                            <action selector="descriptionTextFieldTapped:" destination="ftG-iM-aUh" eventType="editingDidEnd" id="erF-nH-zkb"/>
+                                                                            <segue destination="ozr-GA-mdF" kind="show" identifier="addNRDescriptionSegue" id="xjn-P4-ErC"/>
                                                                         </connections>
                                                                     </textField>
                                                                 </subviews>
@@ -316,14 +317,6 @@
                                                                     </segmentedControl>
                                                                 </subviews>
                                                             </stackView>
-                                                            <button opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Te3-AU-nL5">
-                                                                <rect key="frame" x="0.0" y="267" width="344" height="34"/>
-                                                                <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                                <state key="normal" title="Add Image"/>
-                                                                <connections>
-                                                                    <action selector="addImagesButtonTapped:" destination="ftG-iM-aUh" eventType="touchUpInside" id="2qq-rf-8ZW"/>
-                                                                </connections>
-                                                            </button>
                                                         </subviews>
                                                         <constraints>
                                                             <constraint firstItem="tTV-F4-6QM" firstAttribute="width" secondItem="bwr-pj-XoC" secondAttribute="width" id="KDP-JI-hbw"/>
@@ -331,28 +324,52 @@
                                                             <constraint firstItem="Viw-MZ-SMO" firstAttribute="width" secondItem="uG9-WX-gHQ" secondAttribute="width" id="zz1-F6-SGT"/>
                                                         </constraints>
                                                     </stackView>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="xYt-DK-gHH">
+                                                        <rect key="frame" x="52" y="287" width="280" height="120"/>
+                                                        <subviews>
+                                                            <button opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Te3-AU-nL5">
+                                                                <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" secondItem="Te3-AU-nL5" secondAttribute="height" multiplier="1:1" id="hBd-Fo-T1Y"/>
+                                                                </constraints>
+                                                                <state key="normal" image="purpleCamera"/>
+                                                                <connections>
+                                                                    <action selector="addImagesButtonTapped:" destination="ftG-iM-aUh" eventType="touchUpInside" id="2qq-rf-8ZW"/>
+                                                                </connections>
+                                                            </button>
+                                                            <button opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WMz-Ua-rWG">
+                                                                <rect key="frame" x="160" y="0.0" width="120" height="120"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" secondItem="WMz-Ua-rWG" secondAttribute="height" multiplier="1:1" id="er9-3E-ai0"/>
+                                                                    <constraint firstAttribute="height" constant="120" id="yHN-vS-P5A"/>
+                                                                </constraints>
+                                                                <state key="normal" image="purpleDocument"/>
+                                                            </button>
+                                                        </subviews>
+                                                        <constraints>
+                                                            <constraint firstItem="Te3-AU-nL5" firstAttribute="height" secondItem="WMz-Ua-rWG" secondAttribute="height" id="Uwu-sp-d7A"/>
+                                                        </constraints>
+                                                    </stackView>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.32369780539999998" green="0.1063579395" blue="0.574860394" alpha="0.15384203767123289" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstItem="2zD-GN-TH9" firstAttribute="top" secondItem="7pM-Yd-zE8" secondAttribute="top" constant="20" id="Dk3-9G-kXY"/>
+                                                    <constraint firstAttribute="bottom" secondItem="xYt-DK-gHH" secondAttribute="bottom" constant="20" id="RIv-ec-Yzh"/>
+                                                    <constraint firstItem="xYt-DK-gHH" firstAttribute="centerX" secondItem="7pM-Yd-zE8" secondAttribute="centerX" id="SFB-A9-tCv"/>
                                                     <constraint firstItem="2zD-GN-TH9" firstAttribute="leading" secondItem="7pM-Yd-zE8" secondAttribute="leading" constant="20" id="kZg-xh-OfJ"/>
-                                                    <constraint firstAttribute="bottom" secondItem="2zD-GN-TH9" secondAttribute="bottom" constant="20" id="o8k-Uq-L7j"/>
+                                                    <constraint firstItem="xYt-DK-gHH" firstAttribute="top" secondItem="2zD-GN-TH9" secondAttribute="bottom" constant="20" id="nDJ-YI-G36"/>
                                                     <constraint firstAttribute="trailing" secondItem="2zD-GN-TH9" secondAttribute="trailing" constant="20" id="p0B-MG-043"/>
                                                 </constraints>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2E0-XH-DIw">
-                                                <rect key="frame" x="0.0" y="706" width="414" height="203"/>
+                                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2E0-XH-DIw">
+                                                <rect key="frame" x="0.0" y="852" width="414" height="57"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="203" id="tb0-gf-BaU"/>
-                                                </constraints>
                                             </view>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="F0E-0Z-mSK" secondAttribute="trailing" constant="15" id="8hF-3a-vlg"/>
                                             <constraint firstAttribute="bottom" secondItem="2E0-XH-DIw" secondAttribute="bottom" constant="20" id="9sR-9X-vFt"/>
-                                            <constraint firstItem="2E0-XH-DIw" firstAttribute="top" secondItem="7pM-Yd-zE8" secondAttribute="bottom" constant="20" id="Evo-s4-bqy"/>
                                             <constraint firstItem="F0E-0Z-mSK" firstAttribute="leading" secondItem="pLg-Pb-e4u" secondAttribute="leading" constant="15" id="G6Y-3X-wxD"/>
                                             <constraint firstItem="7pM-Yd-zE8" firstAttribute="top" secondItem="F0E-0Z-mSK" secondAttribute="bottom" constant="15" id="GBQ-7U-hYD"/>
                                             <constraint firstItem="2E0-XH-DIw" firstAttribute="leading" secondItem="pLg-Pb-e4u" secondAttribute="leading" id="MGv-fn-pci"/>
@@ -403,7 +420,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eSH-0c-vT1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3090" y="569"/>
+            <point key="canvasLocation" x="3089.8550724637685" y="568.52678571428567"/>
         </scene>
         <!--Description View Controller-->
         <scene sceneID="PUz-UM-9rx">
@@ -521,6 +538,8 @@
         <image name="circle" catalog="system" width="128" height="121"/>
         <image name="emptyImage" width="1920" height="1920"/>
         <image name="plus" catalog="system" width="128" height="113"/>
+        <image name="purpleCamera" width="1024" height="1024"/>
+        <image name="purpleDocument" width="1024" height="1024"/>
         <image name="square.and.pencil" catalog="system" width="128" height="118"/>
     </resources>
 </document>
